Remove false statement

--- a/README.mkd
+++ b/README.mkd
@@ -4,10 +4,11 @@ Dice and Jaccard differences for sets similarity computation now described graph
 
 ![dice and jaccard comparison](https://github.com/Aluriak/coefficient-comparison/blob/master/results_50measure_100setsize.png)
 
-The triangular inequality is visible in dice case, because of the score lower than jaccard, which is near to linear.
-Run the main script with
+Run the computations:
 
     make
+    
+    
 
 Take a look to `__main__.py` file and the first lines to change constants about measure point and sets size.
 
